# django-pipeline

./: pyproject.toml
pipeline/compressors/: jsmin.py  slimit.py
