[tool.poetry]
name = "datalive-pipeline"
version = "2.0.1"
description = ""
authors = []
packages = [
    { include = "pipeline" },
]

[tool.poetry.dependencies]
python = "^3.6"
django = ">=1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
